Fix menu left align issues

--- a/source/css/core/power_ui_core.css
+++ b/source/css/core/power_ui_core.css
@@ -389,7 +389,7 @@ body, html {
 
 .pw-window {
     min-width: 250px;
-    min-height: 50px;
+    min-height: 100px;
 }
 
 .pw-small-window-mode .pw-window {
